namespace Core.Enum;

public enum NotificationPriority
{
    Low,
    Normal,
    High,
    Critical
}
