namespace Core.Enum;

public enum NotificationType
{
    NEW_ORDER,
    ORDER_CANCELLED,
    ORDER_ITEM_READY,
    ORDER_ITEM_REJECTED,
    ALL_ITEMS_READY,
    PAYMENT_COMPLETED,
    RESERVATION_CREATED,
    RESERVATION_STATUS_CHANGED,
    RESERVATION_REMINDER,
    TABLE_STATUS_CHANGED,
    LOW_STOCK_ALERT,
    DISH_OUT_OF_STOCK,
    SHIFT_ASSIGNED,
    SHIFT_NO_SHOW,
    SHIFT_SWAP_REQUEST,
    SHIFT_MISSING_PUNCH,
    ATTENDANCE_ALERT,
    SYSTEM_ALERT,
    ORDER_STATUS_CHANGED,
    PAYMENT_REQUEST,
    ORDER_ITEMS_ADDED,
    ORDER_ITEM_CANCELLED,
    INVENTORY_TX_SUBMITTED,
    INVENTORY_TX_APPROVED,
    INVENTORY_TX_REJECTED
}
